@@ -1,6 +1,6 @@
 # Generated by oovCMaker
-add_executable(oovEdit FileEditView.cpp Highlighter.cpp History.cpp Indenter.cpp 
-  oovEdit.cpp)
+add_executable(oovEdit Debugger.cpp FileEditView.cpp Highlighter.cpp
+  History.cpp Indenter.cpp oovEdit.cpp)
 
 target_link_libraries(oovEdit oovCommon oovGuiCommon ${GTK_LIBRARIES} 
   ${LLVM_LIBRARIES})
